--- a/L6_Python_Introduction2.ipynb
+++ b/L6_Python_Introduction2.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Программирование на C++ и python\n",
     "## Лекция 6. Введение в `python` (продолжение)\n",
-    "Воробьев Виталий Сергеевич, 11 ноября 2020"
+    "В.С. Воробьев, 11 ноября 2020"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "* Опциональные аргументы\n",
     "* Произвольное количество аргументов\n",
     "* keyworded аргументы\n",
-    "* Аргументы с указанным типом"
+    "* Аннотация типов"
    ]
   },
   {
@@ -57,10 +57,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(summ(2, 2), end=' ')     # порядковые аргументы\n",
-    "print(summ(b=2, a=2), end=' ') # именованные аргументы\n",
-    "print(summ(2, b=2))   # сначала порядковые, а потом именованные\n",
-    "# summ(a=2, 2) <-- ошибка!"
+    "summ(2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summ(b=2, a=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summ(2, b=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summ(a=2, 2)"
    ]
   },
   {
@@ -1224,15 +1248,250 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "source": [
+    "## Сериализация\n",
+    "\n",
+    "* Модуль `ast`\n",
+    "* Модуль `pickle`\n",
+    "* Модуль `json`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### ast - abstract syntax tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    1, 2, 'a',\n",
+    "    ['2', 1],\n",
+    "    (3, 2, 1),\n",
+    "    {x: y**2 for x, y in enumerate(range(3))}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('s1.txt', 'w') as f:\n",
+    "    f.write(repr(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('s1.txt', 'r') as f:\n",
+    "    restored_data = ast.literal_eval(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(restored_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(restored_data[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restored_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### pickle - бинарная сериализация"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    1, 2, 'a',\n",
+    "    ['2', 1],\n",
+    "    (3, 2, 1),\n",
+    "    {x: y**2 for x, y in enumerate(range(3))}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('s1.dat', 'wb') as f:\n",
+    "    pickle.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('s1.dat', 'rb') as f:\n",
+    "    restored_data2 = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restored_data2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### JSON - JavaScript Object Notation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    1, 2, 'a',\n",
+    "    ['2', 1],\n",
+    "    (3, 2, 1),\n",
+    "    {x: y**2 for x, y in enumerate(range(3))}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('s1.txt', 'w') as f:\n",
+    "    json.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('s1.txt', 'r') as f:\n",
+    "    restored_data3 = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restored_data3"
+   ]
   }
  ],
  "metadata": {
